--- a/om mig.html
+++ b/om mig.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="3iORoAW1aEqz4JaSzFRl2kTxpPkHb9NGaX6RN1o4FVw" />
     <title>Document</title>
     <link rel="stylesheet" href="Style.css">
+    <!-- Google tag (gtag.js)-->
+</script>
     
 
     <style>
