--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="3iORoAW1aEqz4JaSzFRl2kTxpPkHb9NGaX6RN1o4FVw" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="Style.css">
+    <!-- Google tag (gtag.js)-->
+</script>
     
 
 </head>
